# routesmith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  host_adapter.md
.github/workflows/: workflow.yml
src/routesmith/: __init__.py  advisory.py  cli.py  config.py  exceptions.py  executor.py  metrics.py  performance.py  planner.py  router.py  state.py  types.py
src/routesmith/hosts/: __init__.py  aider.py  claude_code.py
src/routesmith/install/: __init__.py  aider.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  vscode.py
src/routesmith/server/: stdio.py
tests/: test_advisory.py  test_cli.py  test_install.py  test_integration.py  test_performance.py  test_properties.py  test_router.py
