[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routesmith"
version = "0.1.2"
description = "Auto-route coding agent tasks to the best model in your IDE. Python library + MCP server for Claude Code, Codex, Copilot, Cursor, and Aider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "routesmith contributors" },
]
keywords = ["ai-agents", "coding-agents", "model-routing", "mcp", "mcp-server", "llm", "claude-code", "codex", "copilot", "aider", "cursor", "host-aware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = ["routesmith[dev]"]

[project.scripts]
routesmith = "routesmith.cli:app_entry"

[project.urls]
Homepage = "https://github.com/sidrat2612/routesmith"
Repository = "https://github.com/sidrat2612/routesmith"
Issues = "https://github.com/sidrat2612/routesmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/routesmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
